minio-infra/minio-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-ingress
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
    - host: minio-s3.platform-dev.da.teck.com
      http:
        paths:
          - backend:
              service:
                name: minio
                port:
                  number: 9090
            path: /
            pathType: Prefix
